# file-bundler

./: .gitignore  CMakeLists.txt  LICENSE  README.MD
src/: FileBundler.cpp  FileBundler.h  constants.cpp  constants.h  main.cpp  resource.c  resource.h
